[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/codex_viewer.gd" id="1"]

[node name="CodexViewer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
visible = false
mouse_filter = 2
process_mode = 2
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 32
custom_constants/margin_top = 32
custom_constants/margin_right = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 12
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
text = "Field Codex"
autowrap_mode = 3
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
text = "Close"
focus_mode = 2

[node name="StatusLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
text = "Codex entries unlock as you discover new particle families."
autowrap_mode = 3
size_flags_horizontal = 3

[node name="Content" type="HSplitContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 460)

[node name="EntryList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/Content"]
size_flags_horizontal = 1
size_flags_vertical = 3
select_mode = 0

[node name="EntryPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content"]
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="EntryTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel"]
text = ""
autowrap_mode = 3
size_flags_horizontal = 3
add_theme_font_size_override("font_size", 22)

[node name="TagsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel"]
text = "Tags: None"
autowrap_mode = 3
size_flags_horizontal = 3
add_theme_color_override("font_color", Color(0.75, 0.82, 0.95, 0.9))

[node name="HighlightLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel"]
text = ""
autowrap_mode = 3
size_flags_horizontal = 3
visible = false
add_theme_color_override("font_color", Color(0.95, 0.86, 0.55, 1.0))

[node name="BodyScroll" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EntryBody" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/BodyScroll"]
size_flags_horizontal = 3
size_flags_vertical = 3
fit_content = true
scroll_active = false
autowrap_mode = 3

[node name="AbilitySection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel"]
visible = false
custom_constants/separation = 4

[node name="AbilityLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/AbilitySection"]
text = "Related Abilities"
autowrap_mode = 3
size_flags_horizontal = 3
add_theme_color_override("font_color", Color(0.82, 0.92, 1, 0.96))

[node name="AbilityLinks" type="FlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/AbilitySection"]
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="HazardSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel"]
visible = false
custom_constants/separation = 4

[node name="HazardLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/HazardSection"]
text = "Related Hazards"
autowrap_mode = 3
size_flags_horizontal = 3
add_theme_color_override("font_color", Color(0.96, 0.78, 0.78, 1))

[node name="HazardLinks" type="FlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/HazardSection"]
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="LinkDetailPanel" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel"]
visible = false
size_flags_horizontal = 3

[node name="LinkMargin" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/LinkDetailPanel"]
custom_constants/margin_left = 8
custom_constants/margin_top = 8
custom_constants/margin_right = 8
custom_constants/margin_bottom = 8

[node name="LinkVBox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/LinkDetailPanel/LinkMargin"]
custom_constants/separation = 6
size_flags_horizontal = 3

[node name="LinkHeader" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/LinkDetailPanel/LinkMargin/LinkVBox"]
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="LinkDetailTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/LinkDetailPanel/LinkMargin/LinkVBox/LinkHeader"]
text = ""
autowrap_mode = 3
size_flags_horizontal = 3
add_theme_font_size_override("font_size", 18)

[node name="LinkDetailClose" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/LinkDetailPanel/LinkMargin/LinkVBox/LinkHeader"]
text = "Close"
focus_mode = 2

[node name="LinkDetailBody" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/LinkDetailPanel/LinkMargin/LinkVBox"]
size_flags_horizontal = 3
size_flags_vertical = 1
fit_content = true
scroll_active = false
autowrap_mode = 3

[node name="LinkDetailHighlights" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content/EntryPanel/LinkDetailPanel/LinkMargin/LinkVBox"]
text = ""
autowrap_mode = 3
visible = false
size_flags_horizontal = 3
add_theme_color_override("font_color", Color(0.9, 0.95, 1, 0.9))
